<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ArduinoBT Weather Station</string>
    <string name="title_home">Weather</string>
    <string name="title_dashboard">Control Panel</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_weather_panel">Weather Panel</string>
    <string name="forgetBT">Forget Bluetooth</string>
    <string name="intervalText">Minutes to save data to database:</string>
    <string name="exportTitle">Export the database to CSV File: </string>
    <string name="title_activity_about">About ArduinoBT Weather Station</string>
    <!-- Weather -->
    <string name="title_temp">Temperature °</string>
    <string name="title_humidity">Humidity %</string>
    <string name="title_wind">Wind - mph</string>

    <string name="notification">save</string>
    <string name="between">Alert me when temps fall outside this range</string>
    <string name="above"></string>
    <string name="below"></string>
    <string name="hint1">65.0</string>
    <string name="hint2">75.0</string>

    <!--  Bluetooth -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. BT Weather Station requires Bluetooth</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found - Try pairing in Bluetooth Settings</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="insecure_connect">Connect device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_graph">Graph</string>

    <!-- Graph menu -->
    <string name="graph_hour">Hourly</string>
    <string name="graph_day">Daily</string>
    <string name="graph_week">Weekly</string>
    <string name="title_activity_full_graph">Graph</string>

    <string name="AllHourly">All Hourly</string>
    <string name="graph_hour_temp">Temperature Hourly</string>
    <string name="graph_day_temp">Temperature Daily</string>
    <string name="graph_week_temp">Temperature Weekly</string>

    <string name="AllDaily">All Daily</string>
    <string name="graph_hour_humid">Humidity Hourly</string>
    <string name="graph_day_humid">Humidity Daily</string>
    <string name="graph_week_humid">Humidity Weekly</string>

    <string name="AllWeekly">All Weekly</string>
    <string name="graph_hour_wind">Wind Hourly</string>
    <string name="graph_day_wind">Wind Daily</string>
    <string name="graph_week_wind">Wind Weekly</string>
    <string name="about">About</string>

</resources>
