<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notifications_panel"
    android:layout_width="match_parent"
    android:columnCount="1"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewInsideRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_columnWeight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/between" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/textViewInsideRange"

        android:layout_centerHorizontal="true">



        <EditText
            android:id="@+id/editText"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_columnWeight="1"
            android:hint="@string/hint1"
            android:theme="@style/AppTheme.EditText"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text=" - " />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:theme="@style/AppTheme.EditText"
            android:layout_columnWeight="1"
            android:hint="@string/hint2"/>


        <Button
            android:id="@+id/button"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:layout_columnWeight="1"
            android:theme="@style/AppTheme.Buttons" />

    </GridLayout>

    </GridLayout>
