<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/weatherPanelTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textSize="60sp" />
        <TextView
            android:id="@+id/tempTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/temp"
            android:text="@string/title_temp"
            android:layout_marginLeft="30dp"
            android:textSize="20sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/weatherPanelHumidity"
        android:layout_below="@id/weatherPanelTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/humidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/humidity"
            android:text="@string/title_humidity"
            android:layout_marginLeft="35dp"
            android:textSize="20sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/weatherPanelWind"
        android:layout_width="match_parent"
        android:layout_below="@id/weatherPanelHumidity"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:textSize="60sp" />
        <TextView
            android:id="@+id/windTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_wind"
            android:layout_below="@+id/wind"
            android:layout_marginLeft="40dp"
            android:textSize="20sp" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>